Switch to FFM for Java code (#306)
* Changes to update to JVM 25 and support FFM

* Add a script to clean up dead generated Java

Also make the benches match TSC better with longer iterations.

* The FFM stuff needs more warmup time

because it makes heavier use of things that get JITd.

* Using the new bindgen

but there seems to be a bug in FFM where an FFM upcall poisons a CompletableFuture change
and on the first pass the JIT thinks it's doing one thing, then after warmup C2 freaks out
and either hits a bunch of unipush traps or CompletableFuture/ForkJoinPool traps (depending on if you
use CF chaining or something based on LockSupport parking + volitile and virtual threads).

* Use the standard lib httpclient to have less variables

* Fix broken test

It was always broken, but the arguments to the equals were in the wrong
order, so it was hidden by a colossal delta

* Update lockfile

* Format, clippy, sort

* Update the gradle wrappers for java and kotlin

so they have native access enabled for the wrapper JVM (the actual test JVM was already fine)

* Bump lib.rs test coverage up

* Update CI to the right JDK version

* fmt/clippy/sort

* Further update dokka in the kotlin build

* Remove dead `--library` arg from generate calls

* Try debug build for python docs to not timeout

I can't think of a reason we need release build here anyway...

* Fix the python test situation so its less confusing

* Clean old bindings as part of the test step

avoids stale bindings breaking tests if people are coming into the repo after
a while away. Also note that's an expectation for benches. Someone could still
manually run the bindgen binary if desired, but they'll at least have some
indications of what could be wrong if old code is messing up compilation/runtime

* fmt

* Try a different setup for RTD docs, so we don't time out on their build

* Fix the API URL for RTD

* Switch to using RTD API directly

We had to create pr/branch "versions" and hide them, which we need to 